@@ -2213,6 +2213,14 @@ internal.monitor.SERVER_IDLE_THREADS=HTTP server idle threads
 internal.monitor.SERVER_QUEUE_SIZE=HTTP server queue size
 internal.monitor.MA_HOME_SIZE=MA_HOME usage (bytes)
 internal.monitor.fileStoreSize={0} file store usage (bytes)
+internal.monitor.MA_HOME_PARTITION_TOTAL_SPACE=Mango partition total space (bytes)
+internal.monitor.MA_HOME_PARTITION_USABLE_SPACE=Mango partition usable space (bytes)
+internal.monitor.NOSQL_PARTITION_TOTAL_SPACE=NoSQL partition total space (bytes)
+internal.monitor.NOSQL_PARTITION_USABLE_SPACE=NoSQL partition usable space (bytes)
+internal.monitor.SQL_PARTITION_TOTAL_SPACE=SQL database partition total space (bytes)
+internal.monitor.SQL_PARTITION_USABLE_SPACE=SQL database partition usable space (bytes)
+internal.monitor.FILESTORE_PARTITION_TOTAL_SPACE=Filestore partition total space (bytes)
+internal.monitor.FILESTORE_PARTITION_USABLE_SPACE=Filestore partition usable space (bytes)
 
 java.monitor.JAVA_FREE_MEMORY=JVM free memory (MB)
 java.monitor.JAVA_USED_MEMORY=JVM used memory (MB)
@@ -2261,12 +2269,16 @@ filter.byReadPermissions=Read permissions
 filter.clear=Clear filter
 filter.current=Current filter
 
+filestore.core.description=Default filestore
 filestore.core.permission.read=Core filestore read permission
 filestore.core.permission.write=Core filestore write permission
+filestore.public.description=Public filestore
 filestore.public.permission.write=Public filestore write permission
+filestore.docs.description=Docs filestore
 filestore.docs.permission.read=Docs filestore read permission
 filestore.docs.permission.write=Docs filestore write permission
 filestore.noSuchFileStore=File store {0} is not defined
+filestore.user.description=User filestore {0}
 filestore.user.permission.create=User filestore create permission
 filestore.user.createPermissionDenied=User {0} does not have create permission for filestores
 
