@@ -4,6 +4,7 @@
  */
 package com.serotonin.m2m2.module.definitions.filestore;
 
+import com.serotonin.m2m2.i18n.TranslatableMessage;
 import com.serotonin.m2m2.module.FileStoreDefinition;
 import com.serotonin.m2m2.module.definitions.permissions.PublicFileStoreWritePermissionDefinition;
 
@@ -12,32 +13,28 @@ import com.serotonin.m2m2.module.definitions.permissions.PublicFileStoreWritePer
  * 
  * @author Jared Wiltshire
  */
-public class PublicFileStoreDefinition extends FileStoreDefinition{
+public class PublicFileStoreDefinition extends FileStoreDefinition {
 
-	public static final String NAME = "public";
-	
-	/* (non-Javadoc)
-	 * @see com.serotonin.m2m2.module.FileStoreDefinition#getStoreName()
-	 */
-	@Override
-	public String getStoreName() {
-		return NAME;
-	}
+    public static final String NAME = "public";
 
-	/* (non-Javadoc)
-	 * @see com.serotonin.m2m2.module.FileStoreDefinition#getReadPermissionTypeName()
-	 */
-	@Override
-	protected String getReadPermissionTypeName() {
-		return null;
-	}
+    @Override
+    public TranslatableMessage getStoreDescription() {
+        return new TranslatableMessage("filestore.public.description");
+    }
 
-	/* (non-Javadoc)
-	 * @see com.serotonin.m2m2.module.FileStoreDefinition#getWritePermissionTypeName()
-	 */
-	@Override
-	protected String getWritePermissionTypeName() {
-		return PublicFileStoreWritePermissionDefinition.TYPE_NAME;
-	}
+    @Override
+    public String getStoreName() {
+        return NAME;
+    }
+
+    @Override
+    protected String getReadPermissionTypeName() {
+        return null;
+    }
+
+    @Override
+    protected String getWritePermissionTypeName() {
+        return PublicFileStoreWritePermissionDefinition.TYPE_NAME;
+    }
 
 }
